updated index.html with list of code gods

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <title>My Personal Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>List of Code Gods (Dead or alive)</h1>
+    <ul>
+        <li>Peter Kenez(Me)</li>
+        <li>Zach Warcola(Beast, partner in crime)</li>
+        <li>Baron Skidmore(AKA IamSkiddy,AKA BaronHockeyPlayer, AKA IAmNotSkiddy, AKA IAmSkidd7, AKA Fatylepy??)</li>
+        <li>Steve Jobs</li>
+        <li>Bill Gates</li>
+    </ul>
     <script src="script.js"></script>
   </body>
 </html>
