added steps to becoming code god and updated website header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Personal Website</title>
   </head>
   <body>
-    <h1>List of Code Gods (Dead or alive)</h1>
+    <h1>List of Code Gods (Dead or alive)(Current)</h1>
     <ul>
         <li>Peter Kenez(Me)</li>
         <li>Zach Warcola(Beast, partner in crime)</li>
@@ -13,6 +13,17 @@
         <li>Steve Jobs</li>
         <li>Bill Gates</li>
     </ul>
+    <h2>Steps to become a code god</h2>
+        <ol>
+            <li>Start coding</li>
+            <li>try out for the code gods</li>
+            <li>Impress the current code gods with your skills</li>
+            <li>Recite the entire Bill of Rights</li>
+            <li>Sing "Follow Me" by Uncle Kracker up to the end of the first chorus</li>
+            <li>Eat a Milano and then a Lindor back to back</li>
+            <li>Achieve passive income</li>
+            <li>profit</li>
+        </ol>
     <script src="script.js"></script>
   </body>
 </html>
